        completion system customization. [b1]
    • The external editor can now be configured to open to a given
      line number and column, used for opening source links and
      editing input fields with i_<C-i>. See :h 'editor'. [b4]
    • Improved [macro-string] support, including automatic elision
      of optional elements, and array subscripts. [b4][b7]
    • Marks are now stored as line and column ordinals rather than percentages. [b8]
    • Mapping changes:
      - It's now possible to map keys in many more modes, including
        Hint, Multi-line Output, and Menu. [b4]
      - Added Operator mode for motion maps, per Vim. [b8]
      - Added site-specific mapping groups and related command
        changes. [b6]
      - Added 'timeout' and 'timeoutlen' options. [b6]
      - Added n_{, n_}, n_[, and n_] mappings. [b7]
      - Added <A-b> to execute a builtin mapping. [b6]
      - Added <A-m>l and <A-m>s to aid in the construction of
        macros. [b6]
      - Added <Pass> pseudo-key. [b6]
      - Removed the implicit page load delays during macro playback. [b6]
      - Added the base modes Base, Main, and Command which other
        modes inherit key bindings from. [b6]
    • Command changes:
      - :viusage, :optionusage and :exusage were replaced with :listkeys,
        :listoptions and :listcommands, providing more powerful and
        consistent interactive help facility (improvements include
        listing keys for modes other than Normal, filtering the output,
        and linking to source code locations). [b4]
      - :downloads now opens a download list in the multi-line output
        buffer. Added -sort flag. [b6][b7]
      - :style now supports regexp site-filters on Firefox 6+. [b7]
      - :qa closes only the current window, per Vim. [b7]
      - Added :exit command. [b7]
      - Added :dlclear command. [b7]
      - :extensions has been replaced with a more powerful :addons. [b6]